chore: Update manifest.json, tailwind.config.js, package.json, README.md, LeftSidebar.js, LandingIntro.js, and index.html

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "DashWind",
-  "name": "DashWind",
+  "short_name": "Ihsan",
+  "name": "Ihsan",
   "icons": [
     {
       "src": "favicon.ico",
