--- a/package.json
+++ b/package.json
@@ -20,12 +20,17 @@
     "dayjs": "^1.11.7",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.0.1",
+    "react-datepicker": "^7.0.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-notifications": "^1.7.4",
     "react-redux": "^8.0.5",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-simple-clock": "^1.1.3",
     "react-tailwindcss-datepicker": "^1.6.0",
     "theme-change": "^2.2.0",
     "web-vitals": "^2.1.4"
